Added font awesome icons, my suffering has ended.

--- a/public/index.html
+++ b/public/index.html
@@ -19,10 +19,7 @@
       rel="stylesheet"
     />
     <!-- Custom styles for this template -->
-    <link
-      rel="stylesheet"
-      href="node_modules/bootstrap-social/bootstrap-social.css"
-    />
+    <link rel="stylesheet" href="../node_modules/@fortawesome/fontaw" />
     <link
       rel="stylesheet"
       href="node_modules/@fortawesome/fontawesome-free/css/all.min.css"
